test/errors/incompatibleKinds.compopts
--detailed-errors # incompatibleKinds-detailed.good
--no-detailed-errors # incompatibleKinds-brief.good
